Fixed log in bug with display of welcome and login/out button change. Created new close button model for unicorn function. Fixed layout issues caused by formatting of JSON.

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,10 @@ body {
 background-color: transparent;
 
 }
+
+span {
+    background-color: #ffffff;
+}
 .json-pretty {
     padding-left: 30px;
     padding-right: 30px;
@@ -23,3 +27,4 @@ background-color: transparent;
 .json-number {
     color: #99c794;
 }
+
